# redtonomous-agent

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy-chat.yml  deploy-rdx.yml
go/: go.mod  go.sum  main.go
go/agent/: agent.go
go/cmd/: root.go
go/config/: config.go
go/models/: models.go
go/tools/: tools.go  tools_test.go
python/: pyproject.toml
python/src/redtonomous/: __main__.py  agent.py  cli.py  config.py  context.py  display.py  judge.py  modes.py  plans.py  provider_chain.py  repl_commands.py
python/src/redtonomous/models/: __init__.py  base.py  claude.py  cohere.py  gemini.py  mistral.py  openai_compat.py  registry.py
python/src/redtonomous/tools/: __init__.py  definitions.py  executor.py  filesystem.py  shell.py  web.py
python/tests/: test_agent_modes.py  test_budget.py  test_claude_adapter.py  test_cli_red.py  test_config.py  test_context.py  test_filesystem.py  test_modes_misc.py  test_plans.py  test_repl_commands.py  test_shell.py
typescript/: package-lock.json  package.json
typescript/src/: agent.ts  config.ts  display.ts  index.ts
typescript/src/models/: base.ts  claude.ts  gemini.ts  openai-compat.ts  registry.ts
typescript/src/tools/: definitions.ts  executor.ts  filesystem.ts  shell.ts  web.ts
web/: start.sh
web/api/: agent_runner.py  auth.py  main.py  requirements.txt  ws_manager.py
web/chat/: .env.example  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
web/rdx/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+48 files in other folders)
