[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "redtonomous"
version = "0.1.0"
description = "Autonomous multi-model coding agent CLI — BYOK, no permission prompts, builds real things"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "cohere>=5.0.0",
    "mistralai>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.scripts]
redtonomous = "redtonomous.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
